Use concourse 3 interpolation syntax for booleans
Boolean variables in concourse 3 do not work with the older {{}}
interpolation syntax. They must use the newer syntax: (())

Therefore the pipeline at this commit is incompatible with concourse
2.7.3

Signed-off-by: Divya Bhargov <dbhargov@pivotal.io>
Signed-off-by: Kris Macoskey <kmacoskey@pivotal.io>

--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -658,9 +658,9 @@ jobs:
   plan:
   - aggregate:
     - get: gpdb_src
-      trigger: {{gpdb_src-trigger-flag}}
+      trigger: ((gpdb_src-trigger-flag))
     - get: reduced-frequency-trigger
-      trigger: {{reduced-frequency-trigger-flag}}
+      trigger: ((reduced-frequency-trigger-flag))
     - get: gpaddon_src
       passed: [gate_compile_start]
     - get: pxf_src
@@ -695,9 +695,9 @@ jobs:
   plan:
   - aggregate:
     - get: reduced-frequency-trigger
-      trigger: {{reduced-frequency-trigger-flag}}
+      trigger: ((reduced-frequency-trigger-flag))
     - get: gpdb_src
-      trigger: {{gpdb_src-trigger-flag}}
+      trigger: ((gpdb_src-trigger-flag))
     - get: centos-gpdb-dev-6
       passed: [gate_compile_start]
   - task: compile_gpdb
@@ -740,9 +740,9 @@ jobs:
   plan:
   - aggregate:
     - get: reduced-frequency-trigger
-      trigger: {{reduced-frequency-trigger-flag}}
+      trigger: ((reduced-frequency-trigger-flag))
     - get: gpdb_src
-      trigger: {{gpdb_src-trigger-flag}}
+      trigger: ((gpdb_src-trigger-flag))
       passed: [gate_compile_start]
     - get: gpaddon_src
       passed: [gate_compile_start]
@@ -778,9 +778,9 @@ jobs:
   plan:
   - aggregate:
     - get: reduced-frequency-trigger
-      trigger: {{reduced-frequency-trigger-flag}}
+      trigger: ((reduced-frequency-trigger-flag))
     - get: gpdb_src
-      trigger: {{gpdb_src-trigger-flag}}
+      trigger: ((gpdb_src-trigger-flag))
     - get: ubuntu-gpdb-dev-16
       passed: [gate_compile_start]
   - task: compile_gpdb
@@ -796,9 +796,9 @@ jobs:
   plan:
   - aggregate:
     - get: reduced-frequency-trigger
-      trigger: {{reduced-frequency-trigger-flag}}
+      trigger: ((reduced-frequency-trigger-flag))
     - get: gpdb_src
-      trigger: {{gpdb_src-trigger-flag}}
+      trigger: ((gpdb_src-trigger-flag))
     - get: gpaddon_src
       passed: [gate_compile_start]
     - get: pxf_src
@@ -828,9 +828,9 @@ jobs:
   plan:
   - aggregate:
     - get: reduced-frequency-trigger
-      trigger: {{reduced-frequency-trigger-flag}}
+      trigger: ((reduced-frequency-trigger-flag))
     - get: gpdb_src
-      trigger: {{gpdb_src-trigger-flag}}
+      trigger: ((gpdb_src-trigger-flag))
     - get: gpaddon_src
       passed: [gate_compile_start]
     - get: pxf_src
@@ -2161,7 +2161,7 @@ jobs:
 - name: DPM_backup_43_restore_5
   plan:
   - get: nightly-trigger
-    trigger: {{nightly-trigger-flag}}
+    trigger: ((nightly-trigger-flag))
   - aggregate:
     - get: gpdb_src
       params:
@@ -2171,7 +2171,7 @@ jobs:
     - get: gpdb_binary
       resource: bin_gpdb_centos6
       passed: [gate_nightly_start]
-      trigger: {{reduced-frequency-trigger-flag}}
+      trigger: ((reduced-frequency-trigger-flag))
     - get: gpdb4_binary
       resource: bin_gpdb4_centos6
     - get: ccp_src
@@ -2214,13 +2214,13 @@ jobs:
 - name: MM_gpexpand
   plan:
   - get: nightly-trigger
-    trigger: {{nightly-trigger-flag}}
+    trigger: ((nightly-trigger-flag))
   - aggregate: &post_packaging_gets_trigger_based_on_flag
     - get: gpdb_src
       params: {submodules: none}
       tags: ["gpdb5-pulse-worker"]
       passed: [gate_nightly_start]
-      trigger: {{reduced-frequency-trigger-flag}}
+      trigger: ((reduced-frequency-trigger-flag))
     - get: gpdb_src_tinc_tarball
       tags: ["gpdb5-pulse-worker"]
       passed: [gate_nightly_start]
@@ -2250,7 +2250,7 @@ jobs:
 - name: cs-aoco-compression
   plan:
   - get: nightly-trigger
-    trigger: {{nightly-trigger-flag}}
+    trigger: ((nightly-trigger-flag))
   - aggregate: *post_packaging_gets_trigger_based_on_flag
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
@@ -2269,7 +2269,7 @@ jobs:
 - name: DPM_gptransfer-43x-to-5x
   plan:
   - get: nightly-trigger
-    trigger: {{nightly-trigger-flag}}
+    trigger: ((nightly-trigger-flag))
   - aggregate: *post_packaging_gets_trigger_based_on_flag
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
