Ubuntu enable orca (#3524)
* Pipeline for GPORCA build, GPDB compile & ICG w/ ORCA on ubuntu
* gpadmin uses bash by default & configures GSS api
* Use a param `TEST_SUITE` to determine the test-suite being run
* Merge orca and gpdb compilation jobs & run ICW
  - Fix variable names for gpdb with orca jobs and artifacts
  - Adjust pipeline to horizontal layout
* Refactor and print compiler versions
  - Supply C/C++ Compiler settings as arguments to our build scripts
  - Instead of using `update-alternatives` we pass environment arguments to conan install

Signed-off-by: C.J. Jameson <cjameson@pivotal.io>
Signed-off-by: Larry Hamel <lhamel@pivotal.io>

--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -14,6 +14,7 @@ groups:
   - compile_gpdb_centos7
   - compile_gpdb_sles11
   - compile_gpdb_ubuntu16
+  - compile_gpdb_and_orca_conan_ubuntu16
   - compile_gpdb_windows_cl
   - compile_gpdb_aix7_remote
   - gpdb_rc_packaging_centos
@@ -26,6 +27,7 @@ groups:
   - icw_gporca_centos7
   - icw_gporca_sles11
   - icw_planner_ubuntu16
+  - icw_gporca_conan_ubuntu16
   - icw_planner_ictcp_centos6
   - icw_gporca_centos6_gpos_memory
   - fts
@@ -135,6 +137,7 @@ groups:
   - compile_gpdb_centos7
   - compile_gpdb_sles11
   - compile_gpdb_ubuntu16
+  - compile_gpdb_and_orca_conan_ubuntu16
   - compile_gpdb_windows_cl
   - compile_gpdb_aix7_remote
   - gpdb_rc_packaging_centos
@@ -146,6 +149,7 @@ groups:
   - gate_icw_start
   - icw_planner_centos6
   - icw_planner_ubuntu16
+  - icw_gporca_conan_ubuntu16
   - icw_gporca_centos6
   - icw_gporca_centos7
   - icw_gporca_sles11
@@ -347,6 +351,24 @@ resources:
   type: docker-image
   source:
     repository: pivotaldata/centos-mingw
+
+- name: compiled_bits_orca_with_conan_ubuntu16
+  type: s3
+  source:
+    access_key_id: {{bucket-access-key-id}}
+    bucket: {{bucket-name}}
+    region_name: {{aws-region}}
+    secret_access_key: {{bucket-secret-access-key}}
+    versioned_file: {{compiled_bits_orca_with_conan_ubuntu16_versioned_file}}
+
+- name: compiled_bits_gpdb_with_orca_conan_ubuntu16
+  type: s3
+  source:
+    access_key_id: {{bucket-access-key-id}}
+    bucket: {{bucket-name}}
+    region_name: {{aws-region}}
+    secret_access_key: {{bucket-secret-access-key}}
+    versioned_file: {{compiled_bits_gpdb_with_orca_conan_ubuntu16_versioned_file}}
 
 - name: bin_gpdb_centos6
   type: s3
@@ -653,6 +675,27 @@ jobs:
     - get: centos-gpdb-dev-7
     - get: centos-mingw
     - get: ubuntu-gpdb-dev-16
+
+- name: compile_gpdb_and_orca_conan_ubuntu16
+  plan:
+  - aggregate:
+    - get: reduced-frequency-trigger
+      trigger: ((reduced-frequency-trigger-flag))
+    - get: gpdb_src
+      trigger: ((gpdb_src-trigger-flag))
+    - get: ubuntu-gpdb-dev-16
+      passed: [gate_compile_start]
+  - task: compile_gpdb_and_orca
+    file: gpdb_src/concourse/tasks/compile_gpdb_and_orca_with_conan.yml
+    params:
+      BINTRAY_REMOTE: {{bintray_remote}}
+      BINTRAY_REMOTE_URL: {{bintray_remote_url}}
+  - put: compiled_bits_gpdb_with_orca_conan_ubuntu16
+    params:
+      file: {{compiled_bits_gpdb_with_orca_conan_ubuntu16_versioned_file}}
+  - put: compiled_bits_orca_with_conan_ubuntu16
+    params:
+      file: {{compiled_bits_orca_with_conan_ubuntu16_versioned_file}}
 - name: compile_gpdb_centos6
   plan:
   - aggregate:
@@ -822,7 +865,6 @@ jobs:
   - put: installer_sles11_gpdb_loaders
     params:
       file: gpdb_artifacts/greenplum-loaders-*-sles11-x86_64.zip
-
 - name: compile_gpdb_windows_cl
   plan:
   - aggregate:
@@ -1076,6 +1118,7 @@ jobs:
       - compile_gpdb_centos7
       - compile_gpdb_sles11
       - compile_gpdb_ubuntu16
+      - compile_gpdb_and_orca_conan_ubuntu16
       - compile_gpdb_windows_cl
       - gpdb_rc_packaging_centos
       trigger: true
@@ -1106,6 +1149,12 @@ jobs:
     - get: compiled_bits_ubuntu16
       passed:
       - compile_gpdb_ubuntu16
+    - get: compiled_bits_gpdb_with_orca_conan_ubuntu16
+      passed:
+      - compile_gpdb_and_orca_conan_ubuntu16
+    - get: compiled_bits_orca_with_conan_ubuntu16
+      passed:
+      - compile_gpdb_and_orca_conan_ubuntu16
 ################# Compile Group End
 
 ################# ICW Group
@@ -1140,6 +1189,12 @@ jobs:
       passed:
       - gate_compile_end
     - get: compiled_bits_ubuntu16
+      passed:
+      - gate_compile_end
+    - get: compiled_bits_gpdb_with_orca_conan_ubuntu16
+      passed:
+      - gate_compile_end
+    - get: compiled_bits_orca_with_conan_ubuntu16
       passed:
       - gate_compile_end
 - name: icw_planner_centos6
@@ -1219,7 +1274,6 @@ jobs:
       BLDWRAP_POSTGRES_CONF_ADDONS: "fsync=off"
       TEST_OS: sles
       CONFIGURE_FLAGS: {{configure_flags}}
-
 - name: icw_planner_ubuntu16
   plan:
   - aggregate:
@@ -1235,7 +1289,27 @@ jobs:
     params:
       MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=off' installcheck-world
       CONFIGURE_FLAGS: {{configure_flags}}
-
+- name: icw_gporca_conan_ubuntu16
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      params:
+        submodules: none
+      passed: [gate_icw_start]
+    - get: bin_gpdb
+      passed: [gate_icw_start]
+      resource: compiled_bits_gpdb_with_orca_conan_ubuntu16
+      trigger: true
+    - get: bin_orca
+      passed: [gate_icw_start]
+      resource: compiled_bits_orca_with_conan_ubuntu16
+      trigger: true
+    - get: ubuntu-gpdb-dev-16
+  - task: icw_with_orca
+    image: ubuntu-gpdb-dev-16
+    file: gpdb_src/concourse/tasks/test_with_orca_conan.yml
+    params:
+      TEST_SUITE: "icw"
 - name: icw_gporca_centos6_gpos_memory
   plan:
   - aggregate:
@@ -2911,6 +2985,7 @@ jobs:
     - compile_gpdb_centos7
     - compile_gpdb_sles11
     - compile_gpdb_ubuntu16
+    - compile_gpdb_and_orca_conan_ubuntu16
     - compile_gpdb_windows_cl
     - compile_gpdb_aix7_remote
     - icw_planner_centos6
@@ -2918,6 +2993,7 @@ jobs:
     - icw_gporca_centos7
     - icw_gporca_sles11
     - icw_planner_ubuntu16
+    - icw_gporca_conan_ubuntu16
     - icw_planner_ictcp_centos6
     - client_loader_remote_test_aix
     - mpp_resource_group_centos6
