Use external worker tags in DPM CCP job
The `gen_cluster1` task of this CCP job was not tagged to use the necessary external worker that allows CCP cluster VM network connectivity. The other portions of the job were tagged. This looks to just be an oversight.

--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -2706,6 +2706,7 @@ jobs:
           vars:
             <<: *ccp_default_vars
       - task: gen_cluster1
+        tags: ["gpdb5_ccp_external_worker"]
         file: ccp_src/ci/tasks/gen_cluster.yml
         params:
           <<: *ccp_gen_cluster_default_params
