Trigger mpp_resource_group tests on new binary

--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -3010,6 +3010,7 @@ jobs:
     - get: bin_gpdb
       tags: ["gpdb5_ccp_external_worker"]
       resource: bin_gpdb_centos7
+      trigger: true
     - get: ccp_src
       tags: ["gpdb5_ccp_external_worker"]
     - get: centos-gpdb-dev-7
